@@ -146,11 +146,7 @@ public class LinearInt extends PrimitiveConstraint {
       Store store, List<? extends IntVar> list, List<Integer> weights, String rel, int sum) {
     checkInputForNullness(new String[] {"list", "weights"}, new Object[] {list, weights});
     commonInitialization(
-        store,
-        list.toArray(new IntVar[list.size()]),
-        weights.stream().mapToInt(i -> i).toArray(),
-        rel,
-        sum);
+        store, list.toArray(new IntVar[0]), weights.stream().mapToInt(i -> i).toArray(), rel, sum);
     numberId = idNumber.incrementAndGet();
   }
 
@@ -202,8 +198,8 @@ public class LinearInt extends PrimitiveConstraint {
   public LinearInt(List<? extends IntVar> list, List<Integer> weights, String rel, int sum) {
     checkInputForNullness(new String[] {"list", "weights"}, new Object[] {list, weights});
     commonInitialization(
-        list.get(0).getStore(),
-        list.toArray(new IntVar[list.size()]),
+        list.getFirst().getStore(),
+        list.toArray(new IntVar[0]),
         weights.stream().mapToInt(i -> i).toArray(),
         rel,
         sum);
@@ -233,9 +229,10 @@ public class LinearInt extends PrimitiveConstraint {
 
     this.relationType = relation(rel);
 
-    if (list.length != weights.length)
+    if (list.length != weights.length) {
       throw new IllegalArgumentException(
           "LinearInt has list and weights arguments of different length.");
+    }
 
     this.store = store;
     this.b = sum;
@@ -244,17 +241,24 @@ public class LinearInt extends PrimitiveConstraint {
 
     for (int i = 0; i < list.length; i++) {
       if (weights[i] != 0) {
-        if (list[i].singleton()) this.b -= (long) list[i].value() * weights[i];
-        else if (parameters.get(list[i]) != null) {
+        if (list[i].singleton()) {
+          this.b -= (long) list[i].value() * weights[i];
+        } else if (parameters.get(list[i]) != null) {
           // variable ordered in the scope of the Propagations constraint.
           Long coeff = parameters.get(list[i]);
           Long sumOfCoeff = coeff + weights[i];
           parameters.put(list[i], sumOfCoeff);
-        } else parameters.put(list[i], (long) weights[i]);
+        } else {
+          parameters.put(list[i], (long) weights[i]);
+        }
       }
     }
     int size = 0;
-    for (Long e : parameters.values()) if (e != 0) size++;
+    for (Long e : parameters.values()) {
+      if (e != 0) {
+        size++;
+      }
+    }
 
     this.x = new IntVar[size];
     this.a = new long[size];
@@ -287,8 +291,11 @@ public class LinearInt extends PrimitiveConstraint {
 
     checkForOverflow();
 
-    if (l <= 3) queueIndex = 0;
-    else queueIndex = 1;
+    if (l <= 3) {
+      queueIndex = 0;
+    } else {
+      queueIndex = 1;
+    }
 
     setScope(list);
   }
@@ -326,30 +333,49 @@ public class LinearInt extends PrimitiveConstraint {
         case le:
           pruneLtEq(b);
 
-          if (!reified) if (sumMax <= b) removeConstraint();
+          if (!reified) {
+            if (sumMax <= b) {
+              removeConstraint();
+            }
+          }
           break;
 
         case lt:
           pruneLtEq(b - 1L);
 
-          if (!reified) if (sumMax < b) removeConstraint();
+          if (!reified) {
+            if (sumMax < b) {
+              removeConstraint();
+            }
+          }
           break;
         case ne:
           pruneNeq();
 
-          if (!reified)
+          if (!reified) {
             // if (sumMin == sumMax && (sumMin > b || sumMax < b))
-            if (sumMin > b || sumMax < b) removeConstraint();
+            if (sumMin > b || sumMax < b) {
+              removeConstraint();
+            }
+          }
           break;
         case gt:
           pruneGtEq(b + 1L);
 
-          if (!reified) if (sumMin > b) removeConstraint();
+          if (!reified) {
+            if (sumMin > b) {
+              removeConstraint();
+            }
+          }
           break;
         case ge:
           pruneGtEq(b);
 
-          if (!reified) if (sumMin >= b) removeConstraint();
+          if (!reified) {
+            if (sumMin >= b) {
+              removeConstraint();
+            }
+          }
 
           break;
         default:
@@ -384,7 +410,9 @@ public class LinearInt extends PrimitiveConstraint {
 
     reified = false;
 
-    if (satisfied()) return;
+    if (satisfied()) {
+      return;
+    }
 
     super.impose(store);
   }
@@ -402,7 +430,7 @@ public class LinearInt extends PrimitiveConstraint {
       max = (long) xd.max() * a[i];
       f += min;
       e += max;
-      I[i] = (max - min);
+      I[i] = max - min;
     }
     // negative weights
     for (; i < l; i++) {
@@ -411,7 +439,7 @@ public class LinearInt extends PrimitiveConstraint {
       max = (long) xd.min() * a[i];
       f += min;
       e += max;
-      I[i] = (max - min);
+      I[i] = max - min;
     }
     sumMin = f;
     sumMax = e;
@@ -419,7 +447,9 @@ public class LinearInt extends PrimitiveConstraint {
 
   void pruneLtEq(long b) {
 
-    if (sumMin > b) throw Store.failException;
+    if (sumMin > b) {
+      throw Store.failException;
+    }
 
     long min;
     long max;
@@ -452,7 +482,9 @@ public class LinearInt extends PrimitiveConstraint {
 
   void pruneGtEq(long b) {
 
-    if (sumMax < b) throw Store.failException;
+    if (sumMax < b) {
+      throw Store.failException;
+    }
 
     long min;
     long max;
@@ -485,7 +517,9 @@ public class LinearInt extends PrimitiveConstraint {
 
   void pruneNeq() {
 
-    if (sumMin == sumMax && b == sumMin) throw Store.failException;
+    if (sumMin == sumMax && b == sumMin) {
+      throw Store.failException;
+    }
 
     long min;
     long max;
@@ -522,14 +556,18 @@ public class LinearInt extends PrimitiveConstraint {
     if (min > (long) x.min()) {
       x.domain.inMin(store.level, x, long2int(min));
       return true;
-    } else return false;
+    } else {
+      return false;
+    }
   }
 
   private boolean pruneMax(IntVar x, long max) {
     if (max < (long) x.max()) {
       x.domain.inMax(store.level, x, long2int(max));
       return true;
-    } else return false;
+    } else {
+      return false;
+    }
   }
 
   private boolean pruneNe(IntVar x, long min, long max, long a) {
@@ -540,7 +578,9 @@ public class LinearInt extends PrimitiveConstraint {
 
       boolean boundsChanged = false;
 
-      if (d == x.min() || d == x.max()) boundsChanged = true;
+      if (d == x.min() || d == x.max()) {
+        boundsChanged = true;
+      }
 
       x.domain.inComplement(store.level, x, long2int(d));
 
@@ -623,58 +663,53 @@ public class LinearInt extends PrimitiveConstraint {
 
   private boolean entailed(int rel) {
 
-    switch (rel) {
-      case eq:
-        return satisfiedEq();
-      case le:
-        return satisfiedLtEq(b);
-      case lt:
-        return satisfiedLtEq(b - 1);
-      case ne:
-        return satisfiedNeq();
-      case gt:
-        return satisfiedGtEq(b + 1);
-      case ge:
-        return satisfiedGtEq(b);
-      default:
-        return false;
+    return switch (rel) {
+      case eq -> satisfiedEq();
+      case le -> satisfiedLtEq(b);
+      case lt -> satisfiedLtEq(b - 1);
+      case ne -> satisfiedNeq();
+      case gt -> satisfiedGtEq(b + 1);
+      case ge -> satisfiedGtEq(b);
+      default -> false;
         // throw new RuntimeException("Internal error in " + getClass().getName());
-    }
+    };
   }
 
   public byte relation(String r) {
-    if (r.equals("==")) return eq;
-    else if (r.equals("=")) return eq;
-    else if (r.equals("<")) return lt;
-    else if (r.equals("<=")) return le;
-    else if (r.equals("=<")) return le;
-    else if (r.equals("!=")) return ne;
-    else if (r.equals(">")) return gt;
-    else if (r.equals(">=")) return ge;
-    else if (r.equals("=>")) return ge;
-    else {
+    if ("==".equals(r)) {
+      return eq;
+    } else if ("=".equals(r)) {
+      return eq;
+    } else if ("<".equals(r)) {
+      return lt;
+    } else if ("<=".equals(r)) {
+      return le;
+    } else if ("=<".equals(r)) {
+      return le;
+    } else if ("!=".equals(r)) {
+      return ne;
+    } else if (">".equals(r)) {
+      return gt;
+    } else if (">=".equals(r)) {
+      return ge;
+    } else if ("=>".equals(r)) {
+      return ge;
+    } else {
       System.err.println("Wrong relation symbol in LinearInt constraint " + r + "; assumed ==");
       return eq;
     }
   }
 
   public String rel2String() {
-    switch (relationType) {
-      case eq:
-        return "==";
-      case lt:
-        return "<";
-      case le:
-        return "<=";
-      case ne:
-        return "!=";
-      case gt:
-        return ">";
-      case ge:
-        return ">=";
-      default:
-        return "?";
-    }
+    return switch (relationType) {
+      case eq -> "==";
+      case lt -> "<";
+      case le -> "<=";
+      case ne -> "!=";
+      case gt -> ">";
+      case ge -> ">=";
+      default -> "?";
+    };
   }
 
   void checkForOverflow() {
@@ -706,13 +741,17 @@ public class LinearInt extends PrimitiveConstraint {
 
     for (int i = 0; i < x.length; i++) {
       result.append(x[i]);
-      if (i < x.length - 1) result.append(", ");
+      if (i < x.length - 1) {
+        result.append(", ");
+      }
     }
     result.append("], [");
 
     for (int i = 0; i < a.length; i++) {
       result.append(a[i]);
-      if (i < a.length - 1) result.append(", ");
+      if (i < a.length - 1) {
+        result.append(", ");
+      }
     }
 
     result.append("], ").append(rel2String()).append(", ").append(b).append(" )");
